added started code

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <p class="title">Barnaby.com</p>
                         <p class="subtitle"> Click image to log in</p>
                         <figure class="image is-4by3">
-                            <a href="http://barnaby.com"> <img src="assets\images\IMG_1449.jpg" alt="foggy beach, miramar beach"></a>
+                            <a href="https://206dorian.github.io/Barnaby/login"> <img src="assets\images\IMG_1449.jpg" alt="foggy beach, miramar beach"></a>
                         </figure>
                     </article>
                 </div>
