playign with styling

--- a/index.html
+++ b/index.html
@@ -14,6 +14,27 @@
 </head>
 
 <body>
+   
+        <h1>DORIAN DOUGLAS BARNABY BIRCH</h1>
+    
+
+    <nav class="container is-centered">
+
+        <button class="button is-large is-responsive is-hovered is-rounded">
+            <a href="#button-1"> ABOUT ME</a>
+        </button>
+
+        <button class="button is-large is is-responsive is-hovered is-rounded">
+            <a href="#button-2"> CONTACT ME</a>
+        </button>
+
+        <button class="button is-large is-responsive is-hovered is-rounded">
+            <a href="#button-2"> MY WORK</a>
+        </button>
+
+    </nav>
+    </div>
+
     <div class="tile is-ancestor">
         <div class="tile is-vertical">
             <div class="tile">
@@ -22,7 +43,10 @@
                         <p class="title">Barnaby.com</p>
                         <p class="subtitle"> Click image to log in</p>
                         <figure class="image is-4by3">
-                            <a href="https://206dorian.github.io/Barnaby/login"> <img src="assets\images\IMG_1449.jpg" alt="foggy beach, miramar beach"></a>
+
+
+                            <a href="https://206dorian.github.io/Barnaby/login.html"> <img
+                                    src="assets\images\IMG_1449.jpg" alt="foggy beach, miramar beach"></a>
                         </figure>
                     </article>
                 </div>
