--- a/login.html
+++ b/login.html
@@ -1,12 +1,24 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="./assets/style.css">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+
+    <title>Barnaby.com</title>
+</head>
+
+<body>
+
 <div class='login-page'>
     <div class='container'>
       <div class='row'>
-        <div class='col-2'>
-          <img
-            src="assets\images\IMG_1496.jpg"
-            width='100%'
-          />
-        </div>
+        
         <div class='col-2'>
           <div class='form-container'>
             <div class='form-btn'>
@@ -48,5 +60,14 @@
       </div>
     </div>
   </div>
+
+  <div class='col-2'>
+    <img
+      src="assets\images\IMG_1496.jpg"
+      width='100%'
+    />
+  </div>
   <script src='./js/login.js'></script>
   <script src='./js/toggle-form.js'></script>
+ 
+  </body>
